# exarp

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md
src/: config.rs  dashboard.rs  entropy.py  main.rs  restic.rs
web/: index.html  manifest.json
